Update: Added "overflow" CSS property to the main area.

--- a/request-panel.html
+++ b/request-panel.html
@@ -129,6 +129,7 @@ Custom property|Description|Default
     .data-area {
       @apply --layout-flex;
       padding: 0px 24px 24px 24px;
+      overflow: auto;
 
       @apply --request-panel-main-content;
     }
