--- a/demo/index.html
+++ b/demo/index.html
@@ -43,6 +43,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     request-panel {
       background-color: #fff;
+      min-height: 100vh;
     }
   </style>
 </head>
