--- a/test/continuing-request-test.html
+++ b/test/continuing-request-test.html
@@ -82,6 +82,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           TestHelpers.fireEvent('continue-request', {}, document.body);
         }, 10);
       });
+
+      test('transport-request contains an ID', function(done) {
+        var callback = function(e) {
+          element.removeEventListener('transport-request', callback);
+          assert.typeOf(e.detail.id, 'number');
+          done();
+        };
+        element.addEventListener('transport-request', callback);
+        element.send();
+        setTimeout(function() {
+          TestHelpers.fireEvent('continue-request', {}, document.body);
+        }, 10);
+      });
     });
     </script>
 
