--- a/request-panel.html
+++ b/request-panel.html
@@ -21,6 +21,8 @@ the License.
 <link rel="import" href="../events-target-behavior/events-target-behavior.html">
 <link rel="import" href="../paper-progress/paper-progress.html">
 <link rel="import" href="../uuid-generator/uuid-generator.html">
+<link rel="import" href="../variables-evaluator/variables-evaluator.html">
+
 <!--
 A full request and response view for the Advanced REST client
 
@@ -29,6 +31,10 @@ A full request and response view for the Advanced REST client
 ```
 <request-panel handlers-timeout="2000"></request-panel>
 ```
+
+Note: This element internally uses `variables-evaluator` element but it doesn't
+use `variables-manager` and it soulf be included into the app if variables should
+be evaluated correctly.
 
 ## Request lifecycle
 
@@ -41,6 +47,9 @@ Before sending a request the `before-request` custom event is fired. The event c
 This event is cancellable. If the event has been cancelled by any of the listeners then the request fails. Handlers may set a reason property on the event's detail object to display a reason to the user.
 
 The handler have a timeout set from the `handlers-timeout` attribute of the element to complete any scheduled tasks. If a handler requires more time to execute (eg. request debugger) it should set a `timeout` property on the Promise object. It is a non-normative property for this object but it will help control the workflow properly. The request will be fired after the number of milliseconds of the highest timeout value. If 0 is set then the request will be halted until `continue-request` event is fired.
+
+The request data in the event are already evaluated by the `variables-evaluator`
+element so handlers receive final request parameters.
 
 #### Properties
 
@@ -185,6 +194,7 @@ Custom property|Description|Default
     <paper-toast id="errorToast"></paper-toast>
     <paper-toast id="cancelToast"></paper-toast>
     <uuid-generator id="uuid"></uuid-generator>
+    <variables-evaluator id="eval" no-before-request></variables-evaluator>
   </template>
   <script>
   Polymer({
@@ -411,10 +421,32 @@ Custom property|Description|Default
       this._cancelled = true;
       this._reportCancelation();
     },
-
+    /**
+     * Sends current request
+     * @return {Promise} A promise resolved when the `before-request` custom
+     * event is dispatched.
+     */
     send: function() {
       var request = this._prepareEventRequest();
-      this._beforeRequest(request);
+      return this._beforeProcessVariables(request);
+    },
+    /**
+     * Before the request object can be sent to any `before-request` handler
+     * it must be first evaluated by variables evaluator. It is the only way to
+     * ensure that the handler will receive actuall request data.
+     */
+    _beforeProcessVariables: function(request) {
+      return new Promise((resolve, reject) => {
+        this.cache = undefined;
+        this.context = undefined;
+        this.$.eval._processBeforeRequest(request, resolve, reject);
+      })
+      .then(request => {
+        this._beforeRequest(request);
+      })
+      .catch(() => {
+        this._beforeRequest(request);
+      });
     },
 
     _reset: function() {
