Update: Added support for request-clear-state event to clear the response.

--- a/request-panel.html
+++ b/request-panel.html
@@ -390,7 +390,8 @@ Custom property|Description|Default
 
     listeners: {
       'send-request': '_sendRequestHandler',
-      'abort-request': '_abortRequestHandler'
+      'abort-request': '_abortRequestHandler',
+      'request-clear-state': '_reset'
     },
 
     _attachListeners: function(node) {
